--- a/02-api/package.json
+++ b/02-api/package.json
@@ -20,6 +20,7 @@
     "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-sass": "^2.0.0",
     "handlebars": "^4.0.3",
     "hbsfy": "^2.7.0",
     "jquery": "^3.1.1",
@@ -28,5 +29,8 @@
     "serve-static": "^1.11.1",
     "time-grunt": "^1.2.1",
     "uglifyify": "^3.0.4"
+  },
+  "dependencies": {
+    "pagination": "^0.4.4"
   }
 }
