added date helper, driver Partial and api module for the requests

--- a/02-api/package.json
+++ b/02-api/package.json
@@ -31,6 +31,7 @@
     "uglifyify": "^3.0.4"
   },
   "dependencies": {
-    "pagination": "^0.4.4"
+    "pagination": "^0.4.4",
+    "pluralize": "^4.0.0"
   }
 }
